--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
           </div>
           <p class="center">
-            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-theme darken-2 white-text"><i class="material-icons left">business</i> Resume</a>
+            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-theme-dark darken-2 white-text"><i class="material-icons left">business</i> Resume</a>
             <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text  hide-on-small-only	"><i class="material-icons left">email</i> Contact</a>
             <a target="_blank" href="https://telegram.me/mrnywton" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text"><i class="material-icons left">chat</i> Telegram</a>
           </p>
@@ -483,7 +483,7 @@
       <div class="col l3 s12">
         <h5>Contact</h5>
         <ul>
-          <li><p class="contact-info"><i class="material-icons">smartphone</i> +55 82 98131-5693</p></li>
+          <li><p class="contact-info"><i class="material-icons">smartphone</i> +55 82 99182-2262</p></li>
           <li><p class="contact-info"><i class="material-icons">email</i> nywton.barros@gmail.com</p></li>
         </ul>
       </div>
