--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <body>
 <!-- NAV -->
 <div class="navbar-fixed">
-  <nav class="red darken-2" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo light">Nywton Barros</a>
+  <nav class="blue-theme darken-2" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo light"><div>Icons made by <a href="https://br.flaticon.com/autores/smartline" title="Smartline">Smartline</a> from <a href="https://br.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> Nywton Barros</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#sobre" class="js-scroll-trigger">Sobre</a></li>
         <li><a href="#habilidades" class="js-scroll-trigger">Habilidades</a></li>
@@ -91,7 +91,7 @@
                     I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
           </div>
           <p class="center">
-            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat red darken-2 white-text"><i class="material-icons left">business</i> Currículo</a>
+            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-theme darken-2 white-text"><i class="material-icons left">business</i> Currículo</a>
             <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text  hide-on-small-only	"><i class="material-icons left">email</i> Contato</a>
             <a target="_blank" href="https://telegram.me/mrnywton" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text"><i class="material-icons left">chat</i> Telegram</a>
           </p>
@@ -114,7 +114,7 @@
   <div class="section-title center-align">
     <h4 id="habilidades"><i class="material-icons">code</i> Habilidades</h4>
   </div>
-  <div class="card red darken-2 white-text z-depth-4">
+  <div class="card blue-theme darken-2 white-text z-depth-4">
     <div class="card-content">
       <div class="row">
         <div class="col m6 s12">
@@ -247,7 +247,7 @@
           <p></p>
         </div>
       </div>
-      <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
+      <div class="timeline-badge blue-theme white-text"><i class="material-icons">work</i></div>
     </div>
 
     <div class="timeline-event">
