--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
 <!-- NAV -->
 <div class="navbar-fixed">
   <nav class="blue-theme darken-2" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo light"><div>Icons made by <a href="https://br.flaticon.com/autores/smartline" title="Smartline">Smartline</a> from <a href="https://br.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> Nywton Barros</a>
+    <div class="nav-wrapper container">
+      <a class=" light">
+        <img class="nyw-logo" src="./images/keyboardsvg.svg"></img>
+      </a>
+      <a id="logo-container" href="#" class="brand-logo light">
+      Nywton Barros
+      </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#sobre" class="js-scroll-trigger">Sobre</a></li>
         <li><a href="#habilidades" class="js-scroll-trigger">Habilidades</a></li>
@@ -464,6 +470,7 @@
   <div class="footer-copyright">
     <div class="container">
       Made by <a class="orange-text text-lighten-3" href="#">Nywton Barros</a>
+      <div>Icons made by <a href="https://br.flaticon.com/autores/smartline" title="Smartline">Smartline</a> from <a href="https://br.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> 
     </div>
   </div>
 </footer>
