--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
       Nywton Barros
       </a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#sobre" class="js-scroll-trigger">Sobre</a></li>
-        <li><a href="#habilidades" class="js-scroll-trigger">Habilidades</a></li>
-        <li><a href="#experiencia" class="js-scroll-trigger">Experiência</a></li>
+        <li><a href="#sobre" class="js-scroll-trigger">About</a></li>
+        <li><a href="#habilidades" class="js-scroll-trigger">Skills</a></li>
+        <li><a href="#experiencia" class="js-scroll-trigger">Experience</a></li>
          <li><a href="#portfolio" class="js-scroll-trigger">Portfolio</a></li>
-        <li><a href="#contato" class="js-scroll-trigger">Contato</a></li>
+        <li><a href="#contato" class="js-scroll-trigger">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#sobre" class="js-scroll-trigger">Sobre</a></li>
-        <li><a href="#habilidades" class="js-scroll-trigger">Habilidades</a></li>
-        <li><a href="#experiencia" class="js-scroll-trigger">Experiência</a></li>
-         <li><a href="#portfolio" class="js-scroll-trigger">Portfolio</a></li>
-        <li><a href="#contato" class="js-scroll-trigger">Contato</a></li>
+        <li><a href="#sobre" class="js-scroll-trigger">About</a></li>
+        <li><a href="#habilidades" class="js-scroll-trigger">Skills</a></li>
+        <li><a href="#experiencia" class="js-scroll-trigger">Experience</a></li>
+        <li><a href="#portfolio" class="js-scroll-trigger">Portfolio</a></li>
+        <li><a href="#contato" class="js-scroll-trigger">Contact</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -85,20 +85,25 @@
 
             <div>
               <i class="material-icons">important_devices</i>
-              <span>Desenvolvedor de Software</span>
+              <span>Self-Taugh Developer</span>
             </div>
             <hr/>
-            <p>Desenvolvedor de Software apaixonado por criar novas experiências e simplificar a vida das pessoas através da tecnologia.
-              Desenvolveu sistemas de apoio, APIs, websites e aplicativos para o Governo do Estado de Alagoas. Já atuou como Engenheiro de Software em empresas no Brasil e nos Estados Unidos.</p>
-            <hr>
+            <!--<p>Desenvolvedor de Software apaixonado por criar novas experiências e simplificar a vida das pessoas através da tecnologia.-->
+              <!--Desenvolveu sistemas de apoio, APIs, websites e aplicativos para o Governo do Estado de Alagoas. Já atuou como Engenheiro de Software em empresas no Brasil e nos Estados Unidos.</p>-->
+            <!--<hr>-->
+            <p>
+              Hello, I'm passionate to solve people issues using technology with more than 7 years of experience programing and solving real life problems.
+              Please, leave me a message if you need you project done!
+              My mission is just make people life easier and happier.
+            </p>
             <!--<p>Entre em contato para orçamento de projetos, sites e aplicativos.</p>-->
             <!-- <p> I'm a Full Stack Web Developer from Brazil that started dev about 3 years ago.
                     I love building new experiences for people and simplify their lives.
                     I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
           </div>
           <p class="center">
-            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-theme darken-2 white-text"><i class="material-icons left">business</i> Currículo</a>
-            <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text  hide-on-small-only	"><i class="material-icons left">email</i> Contato</a>
+            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-theme darken-2 white-text"><i class="material-icons left">business</i> Resume</a>
+            <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text  hide-on-small-only	"><i class="material-icons left">email</i> Contact</a>
             <a target="_blank" href="https://telegram.me/mrnywton" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text"><i class="material-icons left">chat</i> Telegram</a>
           </p>
           <br><br>
@@ -118,7 +123,7 @@
 
 <div class="container" >
   <div class="section-title center-align">
-    <h4 id="habilidades"><i class="material-icons">code</i> Habilidades</h4>
+    <h4 id="habilidades"><i class="material-icons">code</i> Skills</h4>
   </div>
   <div class="card blue-theme darken-2 white-text z-depth-4">
     <div class="card-content">
@@ -127,44 +132,34 @@
           <div class="col m2 skill-icon">
           </div>
           <div class="skill-bar col m10 wow fadeIn a1 animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
-            <h5 class="white-text"><i class="material-icons">card_travel</i>  Profissionais </h5>
-            <br><br>
-            <span>Ruby on Rails</span>
-            <div class="progress">
-              <div id="ror-skills" class="determinate" style="width: 90%;"><i class="circle"></i></div>
-            </div>
-
-            <span>HTML</span>
-            <div class="progress">
-              <div class="determinate" style="width: 78%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-            <span>CSS</span>
-            <div class="progress">
-              <div class="determinate" style="width: 78%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-            <span>Node</span>
-            <div class="progress">
-              <div class="determinate" style="width: 70%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-            <span>Java</span>
-            <div class="progress">
-              <div class="determinate" style="width: 66%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-            <span>Android</span>
-            <div class="progress">
-              <div class="determinate" style="width: 70%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-            <span>React Native</span>
-            <div class="progress">
-              <div class="determinate" style="width: 60%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-
+            <h5 class="white-text"><i class="material-icons">card_travel</i>  Tech </h5>
+            <span>- Solve people and business problems throught technology.</span>
+            <br/><span>- HTML / CSS (SASS)</span>
+            <br/><span>- JavaScript (including most recently ES notation and also most popular frameworks (VueJS, React, React Native, Angular, jQuery))</span>
+            <br/><span>- Flux Architecture</span>
+            <br/><span>- API Architecture</span>
+            <br/><span>- NodeJS</span>
+            <br/><span>- PHP</span>
+            <br/><span>- Ruby (also Ruby on Rails)</span>
+            <br/><span>- Java</span>
+            <br/><span>- Android / IOS</span>
+            <br/><span>- Design Patterns</span>
+            <br/><span>- Agile Method</span>
+            <br/><span>- Docker</span>
+            <br/><span>- Git</span>
+            <br/><span>- GirtFlow</span>
+            <br/><span>- Amazon Services (S3...)</span>
+            <br/><span>- Continuous Integration (CI)</span>
+            <br/><span>- TDD and BDD (Test Driven Design / Behaviour Driven Design)</span>
+            <br/><span>- DDD (Domain Driven Design)</span>
+            <br/><span>- Unix / GNU Universe</span>
+            <br/><span>- OSX</span>
+            <br/><span>- GIMP</span>
+            <br/><span>- WebPack</span>
+            <br/><span>- Devops</span>
+            <br/><span>- MongoDB and NOSQL</span>
+            <br/><span>- PostgreSQL</span>
+            <br/><span>- MySQL</span>
           </div>
 
         </div>
@@ -172,27 +167,34 @@
           <div class="col m2 skill-icon">
           </div>
           <div class="skill-bar col m10 wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
-            <h5 class="white-text"><i class="material-icons">accessibility</i> Pessoais </h5>
+            <h5 class="white-text"><i class="material-icons">accessibility</i> Personal </h5>
+            <span>- Team Culture</span>
+            <br/><span>- Speach</span>
+            <br/><span>- Teaching / Mentoring</span>
+            <br/><span>- Selling</span>
+            <br/><span>- Motivation and Energy</span>
+            <br/><span>- Get Things Done</span>
+            <br/><span>- Self-Discipline</span>
+            <br/><span>- Fast Learning</span>
+            <br/><span>- Self-Taught English Language</span>
+            <br/><span>- Self-Taught Developer</span>
+            <br/><span>- Self-Taught Stock Market Investor</span>
+            <br/><span>- Self-Taught Musician</span>
+            <br/><span>- Remote Culture</span>
+            <br/><span>- Father of Two</span>
+            <br/><span>- Good Husband</span>
             <br><br>
-            <span>Comunicação</span>
-            <div class="progress">
-              <div class="determinate" style="width: 98%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-            <span>Trabalho em Equipe</span>
-            <div class="progress">
-              <div class="determinate" style="width: 96%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-            <span>Criatividade</span>
-            <div class="progress">
-              <div class="determinate" style="width: 98%;"><i class="fa fa-circle"></i></div>
-            </div>
-
-            <span>Dedicação</span>
-            <div class="progress">
-              <div class="determinate" style="width: 97%;"><i class="fa fa-circle"></i></div>
-            </div>
+            <h5 class="white-text"><i class="material-icons">accessibility</i> Aditional </h5>
+            <span>B3 (previous BM&F) futures contracts - Dolar and Bovespa Index</span>
+            <br> <span>- Technical Analysis</span>
+            <br> <span>- Price Action</span>
+            <br> <span>- Tape Reading</span>
+            <br> <span>- Forex</span>
+            <br> <span>- Save Money</span>
+            <br> <span>- Software Patent Owner as Writer</span>
+            <br> <span>- Events Prizes</span>
+            <br> <span>- Scientific Research</span>
+            <br> <span>- E-Health published papers</span>
           </div>
         </div>
       </div>
@@ -205,17 +207,19 @@
 <!-- WORK TIME LINE -->
 <div class="container" id="experiencia">
   <div class="section-title center-align">
-    <h4><i class="material-icons">card_travel</i> Experiência Profissional</h4>
+    <h4><i class="material-icons">card_travel</i> Working Experience</h4>
   </div>
   <div class="timeline">
 
     <div class="timeline-event">
       <div class="card timeline-content">
         <div class="card-content">
-          <a href=""><h4>Desenvolvedor Adroid & Backend <br>@IFAL</h4></a>
+          <a href=""><h4>Adroid & Backend Developer @IFAL</h4></a>
           <span>Jan 2014 </span>
-          <p>Bolsista de iniciação científica, trabalhou como programador Web/Mobile
-            desenvolveu o aplicativo Doe+ - Plataforma de Campanhas de Doação e Sangue e Agendamentos dos Hemocentros do Estado de Alagoas. </p>
+          <p>
+
+            Scholarship holder of scientific initiation, worked as Web / Mobile programmer developed the application Doe + - Campaign Platform Donation and Blood Campaigns and Schedules of Hemocentros of the State of Alagoas.
+          </p>
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">IFAL<i class="material-icons right">close</i></span>
@@ -228,10 +232,12 @@
     <div class="timeline-event">
       <div class="card timeline-content">
         <div class="card-content">
-          <a href=""><h4>Desenvolvedor Fullstack Web / Mobile <br> @Secti</h4></a>
+          <a href=""><h4>Fullstack Web / Mobile Developer <br> @Secti</h4></a>
           <span>Set 2015 </span>
-          <p> Programador / Analista de Sistemas, desenvolveu sistemas de controle interno para a
-            Secretaria de Ciência, Tecnologia e Inovação do Estado de Alagoas. Trabalhou também em portais de eventos do Governo.</p>
+          <p>
+
+            Programmer / Systems Analyst, developed internal control systems for the Secretariat of Science, Technology and Innovation of the State of Alagoas. He also worked on government event portals.
+          </p>
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
@@ -244,9 +250,9 @@
     <div class="timeline-event">
       <div class="card timeline-content">
         <div class="card-content">
-          <a href=""><h4>Engenheiro de Software <br> @Roga</h4></a>
-          <span>Jan 2017 / Março 2018</span>
-          <p> Atuou como Engenheiro de Software em vários projetos Web e Mobile. Principais tecnologias: Ruby on Rails, Angular, React, NodeJS.  </p>
+          <a href=""><h4>Software Engineer<br> @Roga</h4></a>
+          <span>Jan 2017 / Current days</span>
+          <p>Acted as Software Engineer in several Web and Mobile projects. Main technologies: Ruby on Rails, Angular, React, Vuejs Flux, NodeJS.  </p>
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
@@ -259,9 +265,10 @@
     <div class="timeline-event">
       <div class="card timeline-content">
         <div class="card-content">
-          <a href=""><h4>Desenvolvedor Full Stack <br> @DMCBrazil</h4></a>
+          <a href=""><h4>Fullstack Web / Mobile Developer <br> @DMCBrazil</h4></a>
           <span>Junho 2018 / Agosto 2018</span>
-          <p> Realizou manutenção e desenvolveu novas funcionalidades em sistemas de gerenciamento de eventos. Principais Tecnologias: Ruby on Rails  </p>
+          <p> Performed maintenance and developed new functionalities in event management systems. Key Technologies: Ruby on Rails
+          </p>
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
@@ -269,6 +276,21 @@
         </div>
       </div>
       <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
+    </div>
+
+    <div class="timeline-event">
+      <div class="card timeline-content">
+        <div class="card-content">
+          <a href=""><h4>Software Engineer<br> @Clip</h4></a>
+          <span>Jan 2017 / Current days</span>
+          <p>Acted as Front-End Software Engineer in several Web projects. Main technologies: Angular, React, Vuejs Flux, NodeJS, DDD, MongoDB.  </p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+          <p></p>
+        </div>
+      </div>
+      <div class="timeline-badge blue-theme white-text"><i class="material-icons">work</i></div>
     </div>
 
   </div>
@@ -447,19 +469,19 @@
 <!--</div>-->
 <!--</section>-->
 
-<footer id="contato" class="page-footer red darken-2">
+<footer id="contato" class="page-footer blue-theme-light darken-2">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">Nywton Barros</h5>
-        <p class="grey-text text-lighten-4">
-          Full Stack Web Developer from Brazil that started dev about 4 years ago.
+        <h5>Nywton Barros</h5>
+        <p class="text-lighten-4">
+          Full Stack Developer from Brazil.
         </p>
 
 
       </div>
       <div class="col l3 s12">
-        <h5 class="white-text">Contato</h5>
+        <h5>Contact</h5>
         <ul>
           <li><p class="contact-info"><i class="material-icons">smartphone</i> +55 82 98131-5693</p></li>
           <li><p class="contact-info"><i class="material-icons">email</i> nywton.barros@gmail.com</p></li>
@@ -469,7 +491,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="#">Nywton Barros</a>
+      Made by <a class="text-lighten-3" href="#">Nywton Barros</a>
       <div>Icons made by <a href="https://br.flaticon.com/autores/smartline" title="Smartline">Smartline</a> from <a href="https://br.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> 
     </div>
   </div>
