--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
   <link rel="icon" type="image/png" href="favicon.ico" />
   <link rel="icon" type="image/gif" href="favicon.ico" />
 
-  <meta name="theme-color" content="#ee6e73" />
+  <meta name="theme-color" content="#0092c4" />
 </head>
 <body>
 <!-- NAV -->
 <div class="navbar-fixed">
-  <nav class="blue-theme darken-2" role="navigation">
+  <nav class="blue-theme-dark darken-2" role="navigation">
     <div class="nav-wrapper container">
       <a class=" light">
-        <img class="nyw-logo" src="./images/keyboardsvg.svg"></img>
+        <img class="nyw-logo hide-on-small-only" src="./images/keyboardsvg.svg"></img>
       </a>
       <a id="logo-container" href="#" class="brand-logo light">
       Nywton Barros
