--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
               <!--Desenvolveu sistemas de apoio, APIs, websites e aplicativos para o Governo do Estado de Alagoas. Já atuou como Engenheiro de Software em empresas no Brasil e nos Estados Unidos.</p>-->
             <!--<hr>-->
             <p>
-                Hello, I'm passionate to solve people issues using technology. With more than 7 years of experience programing and solving real life problems. Please, leave me a message if you need you project done! My mission is just make people life easier and happier.
+                Hello, I'm passionate to solve people issues using technology. I'm about 7 years of 
+experience programming and solving real life problems. Please, leave me a message if you need you project done! My mission is just make people life easier and happier.
             </p>
             <!--<p>Entre em contato para orçamento de projetos, sites e aplicativos.</p>-->
             <!-- <p> I'm a Full Stack Web Developer from Brazil that started dev about 3 years ago.
