--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ experience programming and solving real life problems. Please, leave me a messag
             <br/><span>- Agile Method</span>
             <br/><span>- Docker</span>
             <br/><span>- Git</span>
-            <br/><span>- GirtFlow</span>
+            <br/><span>- GitFlow</span>
             <br/><span>- Amazon Services (S3...)</span>
             <br/><span>- Continuous Integration (CI)</span>
             <br/><span>- TDD and BDD (Test Driven Design / Behaviour Driven Design)</span>
