--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
               <!--Desenvolveu sistemas de apoio, APIs, websites e aplicativos para o Governo do Estado de Alagoas. Já atuou como Engenheiro de Software em empresas no Brasil e nos Estados Unidos.</p>-->
             <!--<hr>-->
             <p>
-                Hello, I'm passionate to solve people issues using technology. I'm about 7 years of 
-experience programming and solving real life problems. Please, leave me a message if you need you project done! My mission is just make people life easier and happier.
+                Hello, I'm passionate about solving modern day problems through technology. I have about 7 years of
+programming experience and solving real life problems. Feel free to leave me a message if you need your project done! My mission is just make life easier and happier.
             </p>
             <!--<p>Entre em contato para orçamento de projetos, sites e aplicativos.</p>-->
             <!-- <p> I'm a Full Stack Web Developer from Brazil that started dev about 3 years ago.
@@ -132,9 +132,9 @@ experience programming and solving real life problems. Please, leave me a messag
           </div>
           <div class="skill-bar col m10 wow fadeIn a1 animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
             <h5 class="white-text"><i class="material-icons">card_travel</i>  Tech </h5>
-            <span>- Solve people and business problems throught technology.</span>
+            <span>- Solve people and business problems through technology.</span>
             <br/><span>- HTML / CSS (SASS)</span>
-            <br/><span>- JavaScript (including most recently ES notation and also most popular frameworks (VueJS, React, React Native, Angular, jQuery))</span>
+            <br/><span>- JavaScript (including most recently ES notation and also the most popular frameworks (VueJS, React, React Native, Angular, jQuery))</span>
             <br/><span>- Flux Architecture</span>
             <br/><span>- API Architecture</span>
             <br/><span>- NodeJS</span>
