--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <!--<hr>-->
             <p>
                 Hello, I'm passionate about solving modern day problems through technology. I have about 7 years of
-programming experience and solving real life problems. Feel free to leave me a message if you need your project done! My mission is just make life easier and happier.
+programming experience and solving real life problems. Feel free to leave me a message if you need your project done! My mission is just to make life easier and happier.
             </p>
             <!--<p>Entre em contato para orçamento de projetos, sites e aplicativos.</p>-->
             <!-- <p> I'm a Full Stack Web Developer from Brazil that started dev about 3 years ago.
