--- a/index.html
+++ b/index.html
@@ -133,29 +133,23 @@ programming experience and solving real life problems. Feel free to leave me a m
           <div class="skill-bar col m10 wow fadeIn a1 animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
             <h5 class="white-text"><i class="material-icons">card_travel</i>  Tech </h5>
             <span>- Solve people and business problems through technology.</span>
-            <br/><span>- HTML / CSS (SASS)</span>
+            <br/><span>- HTML / CSS</span>
             <br/><span>- JavaScript (including most recently ES notation and also the most popular frameworks (VueJS, React, React Native, Angular, jQuery))</span>
             <br/><span>- Flux Architecture</span>
-            <br/><span>- API Architecture</span>
-            <br/><span>- NodeJS</span>
+            <br/><span>- Rest API Architecture</span>
+            <br/><span>- NodeJS (plays once)</span>
             <br/><span>- PHP</span>
             <br/><span>- Ruby (also Ruby on Rails)</span>
             <br/><span>- Java</span>
-            <br/><span>- Android / IOS</span>
+            <br/><span>- Android / IOS (Java, React Native, Ionic)</span>
             <br/><span>- Design Patterns</span>
-            <br/><span>- Agile Method</span>
+            <br/><span>- Agile Culture</span>
             <br/><span>- Docker</span>
             <br/><span>- Git</span>
-            <br/><span>- GitFlow</span>
-            <br/><span>- Amazon Services (S3...)</span>
-            <br/><span>- Continuous Integration (CI)</span>
+            <br/><span>- Amazon Services (S3 / EC2...)</span>
             <br/><span>- TDD and BDD (Test Driven Design / Behaviour Driven Design)</span>
             <br/><span>- DDD (Domain Driven Design)</span>
             <br/><span>- Unix / GNU Universe</span>
-            <br/><span>- OSX</span>
-            <br/><span>- GIMP</span>
-            <br/><span>- WebPack</span>
-            <br/><span>- Devops</span>
             <br/><span>- MongoDB and NOSQL</span>
             <br/><span>- PostgreSQL</span>
             <br/><span>- MySQL</span>
@@ -168,7 +162,6 @@ programming experience and solving real life problems. Feel free to leave me a m
           <div class="skill-bar col m10 wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
             <h5 class="white-text"><i class="material-icons">accessibility</i> Personal </h5>
             <span>- Team Culture</span>
-            <br/><span>- Selling</span>
             <br/><span>- Motivation and Energy</span>
             <br/><span>- Get Things Done</span>
             <br/><span>- Self-Discipline</span>
@@ -181,13 +174,7 @@ programming experience and solving real life problems. Feel free to leave me a m
             <br/><span>- Father of Two</span>
             <br><br>
             <h5 class="white-text"><i class="material-icons">accessibility</i> Aditional </h5>
-            <span>B3 (previous BM&F) futures contracts - Dolar and Bovespa Index</span>
-            <br> <span>- Technical Analysis</span>
-            <br> <span>- Price Action</span>
-            <br> <span>- Tape Reading</span>
-            <br> <span>- Forex</span>
-            <br> <span>- Save Money</span>
-            <br> <span>- Software Patent Owner as Writer</span>
+            <span>- Software Patent Owner as Writer</span>
             <br> <span>- Events Prizes</span>
             <br> <span>- Scientific Research</span>
             <br> <span>- E-Health published papers</span>
@@ -288,6 +275,38 @@ programming experience and solving real life problems. Feel free to leave me a m
       </div>
       <div class="timeline-badge blue-theme white-text"><i class="material-icons">work</i></div>
     </div>
+
+    <div class="timeline-event">
+      <div class="card timeline-content">
+        <div class="card-content">
+          <a href=""><h4>IT Support / Software Developer <br> @Hospital do Coração de Alagoas</h4></a>
+          <span>Nov 2019 / Oct 2020</span>
+          <p> User support. Software developer. Key Technologies: Java, Grails, AngularJS / Windows Server
+          </p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+          <p></p>
+        </div>
+      </div>
+      <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
+    </div>
+
+    <div class="timeline-event">
+      <div class="card timeline-content">
+        <div class="card-content">
+          <a href=""><h4>Software Engineer<br> @Jaya Tech</h4></a>
+          <span>Since october 2020 </span>
+          <p>Acted as Front-End Software Engineer in several Web projects. Main technologies: Angular, React, Vuejs Flux, NodeJS, DDD, MongoDB.  </p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+          <p></p>
+        </div>
+      </div>
+      <div class="timeline-badge blue-theme white-text"><i class="material-icons">work</i></div>
+    </div>
+
 
   </div>
 </div>
