--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ programming experience and solving real life problems. Feel free to leave me a m
         <div class="card-content">
           <a href=""><h4>Software Engineer<br> @Jaya Tech</h4></a>
           <span>Since october 2020 </span>
-          <p>Acted as Front-End Software Engineer in several Web projects. Main technologies: Angular, React, Vuejs Flux, NodeJS, DDD, MongoDB.  </p>
+          <p>Software Engnineeri, work together with remote team from US (PWNHealth) </p>
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
