--- a/index.html
+++ b/index.html
@@ -414,55 +414,8 @@ programming experience and solving real life problems. Feel free to leave me a m
 
 </div><!-- /.container -->
 
-<!-- PORTFOLIO -->
-<!-- <div class="container">
-  <div class="section-title center-align">
-    <h4><i class="material-icons">card_travel</i> Portfolio</h4>
-  </div>
-
-  <div class="row">
-
-    <div class="col s12 m4 l3">
-      <div class="card portfolio-item z-depth-1">
-        <div class="card-image">
-          <img src="images/portfolio/doe.jpeg" alt="Doe+">
-        </div>
-      </div>
-    </div>
-
-    <div class="col s12 m4 l3">
-      <div class="card portfolio-item z-depth-1">
-        <div class="card-image">
-          <img src="images/portfolio/doe.jpeg" alt="Doe+">
-        </div>
-      </div>
-    </div>
-
-    <div class="col s12  m4 l3">
-      <div class="card portfolio-item z-depth-1">
-        <div class="card-image">
-          <img src="images/portfolio/doe.jpeg" alt="Doe+">
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div> -->
-
 <br><br>
 
-<!-- <section id="contact-form">
-  <div class="container">
-    <div class="row">
-      <div class="section-title center-align">
-        <h4> <i class="fa fa-send"></i>Contato</h2>
-      </div>
-      <div class="card z-depth-4" id="contact">
-        <div class="card-content">
-      <p class="contact-info"><i class="material-icons">smartphone</i> +55 82 99129-5880</p>
-      <p class="contact-info"><i class="material-icons">email</i> nywton.barros@gmail.com</p>
-    </div>
-      </div> -->
 
 <!-- =========================================
         INTEREST
@@ -484,12 +437,12 @@ programming experience and solving real life problems. Feel free to leave me a m
 <!--</div>-->
 <!--</section>-->
 
-<footer id="contato" class="page-footer blue-theme-light darken-2">
+<footer id="contato" class="page-footer darken-2" style="background: #333  !important;">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
         <h5>Nywton Barros</h5>
-        <p class="text-lighten-4">
+        <p class="text-lighten-4 white-text">
           Full Stack Developer from Brazil.
         </p>
 
@@ -497,9 +450,19 @@ programming experience and solving real life problems. Feel free to leave me a m
       </div>
       <div class="col l3 s12">
         <h5>Contact</h5>
-        <ul>
-          <li><p class="contact-info"><i class="material-icons">smartphone</i> +55 82 99129-5880</p></li>
-          <li><p class="contact-info"><i class="material-icons">email</i> nywton.barros@gmail.com</p></li>
+        <ul class="white-text">
+          <li>
+            <span class="contact-info" style="display: flex;gap: 10px; margin-bottom: 10px">
+              <i class="material-icons">smartphone</i>
+              <span>+55 82 99129-5880 </span>
+            </span>
+          </li>
+          <li>
+            <span class="contact-info" style="display: flex;gap: 10px;">
+              <i class="material-icons">email</i>
+              <span>nywton.barros@gmail.com</span>
+            </span>  
+          </li>
         </ul>
       </div>
     </div>
